--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -3,31 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex Tournaments - Site en Maintenance</title>
+    <title>Flex Tournaments - Maintenance</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-                'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-                sans-serif;
-            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #e2e8f0;
-        }
-
-        .maintenance-container {
-            text-align: center;
-            padding: 40px 20px;
-            max-width: 600px;
-            animation: fadeIn 0.8s ease-in;
         }
 
         @keyframes fadeIn {
@@ -41,105 +22,242 @@
             }
         }
 
-        .logo {
-            margin-bottom: 40px;
+        @keyframes pulse {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.5;
+            }
         }
 
-        .logo-icon {
-            width: 80px;
-            height: 80px;
-            background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
-            border-radius: 12px;
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
+        }
+
+        @keyframes ping {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+            75%, 100% {
+                transform: scale(2);
+                opacity: 0;
+            }
+        }
+
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', sans-serif;
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 50%, #0f172a 100%);
+            min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 48px;
-            margin: 0 auto 20px;
-            box-shadow: 0 20px 25px rgba(79, 70, 229, 0.3);
-            animation: pulse 2s infinite;
+            color: #e2e8f0;
+            position: relative;
+            overflow: hidden;
         }
 
-        @keyframes pulse {
-            0%, 100% {
-                box-shadow: 0 20px 25px rgba(79, 70, 229, 0.3);
-            }
-            50% {
-                box-shadow: 0 20px 25px rgba(79, 70, 229, 0.6);
-            }
+        /* Floating particles background */
+        .particles {
+            position: fixed;
+            inset: 0;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        .particle {
+            position: absolute;
+            border-radius: 50%;
+            animation: ping 2s cubic-bezier(0, 0, 0.2, 1) infinite;
+        }
+
+        .particle-1 {
+            width: 6px;
+            height: 6px;
+            background: #818cf8;
+            top: 20%;
+            left: 15%;
+            animation-duration: 3s;
+        }
+
+        .particle-2 {
+            width: 4px;
+            height: 4px;
+            background: #a78bfa;
+            top: 30%;
+            right: 20%;
+            animation-duration: 4s;
+            animation-delay: 1s;
+        }
+
+        .particle-3 {
+            width: 5px;
+            height: 5px;
+            background: #fbbf24;
+            bottom: 25%;
+            left: 25%;
+            animation-duration: 3.5s;
+            animation-delay: 2s;
+        }
+
+        /* Background orbs */
+        .orb {
+            position: absolute;
+            border-radius: 50%;
+            filter: blur(80px);
+            opacity: 0.1;
+            animation: pulse 4s ease-in-out infinite;
+        }
+
+        .orb-1 {
+            width: 400px;
+            height: 400px;
+            background: #4f46e5;
+            top: -100px;
+            right: -100px;
+        }
+
+        .orb-2 {
+            width: 400px;
+            height: 400px;
+            background: #a855f7;
+            bottom: -150px;
+            left: -100px;
+            animation-delay: 2s;
+        }
+
+        .maintenance-container {
+            position: relative;
+            z-index: 10;
+            text-align: center;
+            padding: 40px 20px;
+            max-width: 700px;
+            animation: fadeIn 0.8s ease-out;
+        }
+
+        .logo-section {
+            margin-bottom: 40px;
+            animation: fadeIn 0.8s ease-out;
+        }
+
+        .logo-wrapper {
+            position: relative;
+            display: inline-block;
+            margin-bottom: 20px;
+        }
+
+        .logo-ring {
+            position: absolute;
+            inset: -20px;
+            border: 2px solid rgba(79, 70, 229, 0.3);
+            border-radius: 50%;
+            animation: spin 8s linear infinite;
+        }
+
+        .logo-icon {
+            width: 100px;
+            height: 100px;
+            background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
+            border-radius: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 56px;
+            box-shadow: 0 20px 40px rgba(79, 70, 229, 0.4), inset 0 1px 0 rgba(255, 255, 255, 0.1);
+            position: relative;
+            animation: bounce 2s ease-in-out infinite;
         }
 
         .logo-text {
-            font-size: 24px;
-            font-weight: 700;
-            background: linear-gradient(135deg, #ffffff 0%, #a1a5fb 100%);
+            font-size: 28px;
+            font-weight: 900;
+            background: linear-gradient(135deg, #ffffff 0%, #818cf8 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            margin-top: 16px;
         }
 
         h1 {
             font-size: 48px;
             margin-bottom: 20px;
             font-weight: 900;
-            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+            background: linear-gradient(135deg, #ffffff 0%, #818cf8 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            letter-spacing: -1px;
         }
 
         .subtitle {
-            font-size: 20px;
+            font-size: 18px;
             color: #cbd5e1;
             margin-bottom: 40px;
             line-height: 1.6;
+            font-weight: 500;
         }
 
-        .status {
+        .status-card {
             background: rgba(79, 70, 229, 0.1);
             border: 1px solid rgba(79, 70, 229, 0.3);
-            border-radius: 8px;
-            padding: 20px;
+            border-radius: 12px;
+            padding: 24px;
             margin-bottom: 40px;
             backdrop-filter: blur(10px);
         }
 
-        .status-item {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 12px;
-            margin: 10px 0;
-        }
-
         .status-dot {
+            display: inline-block;
             width: 12px;
             height: 12px;
             border-radius: 50%;
             background: #f97316;
-            animation: blink 1s infinite;
-        }
-
-        @keyframes blink {
-            0%, 100% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0.3;
-            }
+            margin-right: 10px;
+            animation: ping 2s cubic-bezier(0, 0, 0.2, 1) infinite;
         }
 
         .status-text {
             font-size: 16px;
             color: #fbbf24;
+            font-weight: 600;
         }
 
-        .message {
-            background: rgba(148, 163, 184, 0.1);
+        .message-box {
+            background: rgba(148, 163, 184, 0.05);
             border-left: 4px solid #4f46e5;
-            border-radius: 4px;
-            padding: 20px;
+            border-radius: 8px;
+            padding: 24px;
             text-align: left;
             margin-bottom: 40px;
-            font-size: 14px;
+            font-size: 15px;
             line-height: 1.8;
             color: #cbd5e1;
+        }
+
+        .message-box strong {
+            color: #ffffff;
+            display: block;
+            margin-bottom: 8px;
+            font-size: 16px;
+        }
+
+        .message-box p {
+            margin-bottom: 12px;
         }
 
         .cta-buttons {
@@ -147,28 +265,32 @@
             gap: 16px;
             justify-content: center;
             flex-wrap: wrap;
+            margin-bottom: 40px;
         }
 
         .btn {
-            padding: 12px 32px;
-            border-radius: 8px;
+            padding: 14px 36px;
+            border-radius: 10px;
             font-size: 16px;
-            font-weight: 600;
+            font-weight: 700;
             text-decoration: none;
             border: none;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            letter-spacing: 0.5px;
         }
 
         .btn-primary {
             background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
             color: white;
-            box-shadow: 0 10px 20px rgba(79, 70, 229, 0.3);
+            box-shadow: 0 15px 35px rgba(79, 70, 229, 0.4);
+            border: 1px solid rgba(79, 70, 229, 0.5);
         }
 
         .btn-primary:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 15px 30px rgba(79, 70, 229, 0.4);
+            transform: translateY(-4px);
+            box-shadow: 0 20px 45px rgba(79, 70, 229, 0.6);
+            border-color: rgba(79, 70, 229, 0.8);
         }
 
         .btn-secondary {
@@ -178,11 +300,13 @@
         }
 
         .btn-secondary:hover {
-            background: rgba(79, 70, 229, 0.1);
+            background: rgba(79, 70, 229, 0.15);
+            border-color: #818cf8;
+            color: #818cf8;
         }
 
         .footer {
-            margin-top: 60px;
+            margin-top: 50px;
             padding-top: 30px;
             border-top: 1px solid rgba(148, 163, 184, 0.2);
             font-size: 14px;
@@ -192,19 +316,20 @@
         .footer a {
             color: #4f46e5;
             text-decoration: none;
+            transition: color 0.3s;
         }
 
         .footer a:hover {
-            text-decoration: underline;
+            color: #818cf8;
         }
 
-        @media (max-width: 600px) {
+        @media (max-width: 640px) {
             h1 {
-                font-size: 32px;
+                font-size: 36px;
             }
 
             .subtitle {
-                font-size: 18px;
+                font-size: 16px;
             }
 
             .cta-buttons {
@@ -214,40 +339,71 @@
             .btn {
                 width: 100%;
             }
+
+            .logo-icon {
+                width: 80px;
+                height: 80px;
+                font-size: 44px;
+            }
+
+            .logo-text {
+                font-size: 24px;
+            }
         }
     </style>
 </head>
 <body>
+    <!-- Background effects -->
+    <div class="particles">
+        <div class="particle particle-1"></div>
+        <div class="particle particle-2"></div>
+        <div class="particle particle-3"></div>
+    </div>
+    <div class="orb orb-1"></div>
+    <div class="orb orb-2"></div>
+
     <div class="maintenance-container">
-        <div class="logo">
-            <div class="logo-icon">🏆</div>
+        <!-- Logo Section -->
+        <div class="logo-section">
+            <div class="logo-wrapper">
+                <div class="logo-ring"></div>
+                <div class="logo-icon">🏆</div>
+            </div>
             <div class="logo-text">Flex Tournaments</div>
         </div>
 
+        <!-- Headline -->
         <h1>Site en Maintenance</h1>
-        
+
+        <!-- Subtitle -->
         <p class="subtitle">
             Nous améliorons la plateforme pour vous offrir la meilleure expérience possible.
         </p>
 
-        <div class="status">
-            <div class="status-item">
-                <div class="status-dot"></div>
+        <!-- Status Card -->
+        <div class="status-card">
+            <div style="margin-bottom: 12px;">
+                <span class="status-dot"></span>
                 <span class="status-text">Maintenance en cours...</span>
             </div>
-            <div class="status-item">
-                <span style="color: #94a3b8;">Nous serons de retour très bientôt</span>
+            <div style="color: #94a3b8;">
+                ✨ Nous serons de retour très bientôt
             </div>
         </div>
 
-        <div class="message">
-            <strong>Qu'est-ce qui se passe?</strong><br>
-            Nous effectuons une maintenance programmée pour améliorer les performances, ajouter de nouvelles fonctionnalités et renforcer la sécurité de Flex Tournaments.
-            <br><br>
-            <strong>Quand revient-on?</strong><br>
-            Nous prévoyons une remise en ligne dans les prochaines heures. Merci de votre patience! ⏰
+        <!-- Message Box -->
+        <div class="message-box">
+            <p>
+                <strong>Qu'est-ce qui se passe?</strong>
+                Nous effectuons une maintenance programmée pour améliorer les performances, ajouter de nouvelles fonctionnalités et renforcer la sécurité de Flex Tournaments.
+            </p>
+            <p>
+                <strong>Quand revient-on?</strong>
+                Nous prévoyons une remise en ligne dans les prochaines heures. Merci de votre patience! ⏰
+            </p>
         </div>
 
+        <!-- CTA Buttons -->
         <div class="cta-buttons">
             <button class="btn btn-primary" onclick="location.reload()">
                 Vérifier la disponibilité
@@ -257,6 +413,7 @@
             </a>
         </div>
 
+        <!-- Footer -->
         <div class="footer">
             <p>Flex Tournaments © 2026 • <a href="/status">État du système</a></p>
         </div>
